k2s/test/e2e/addons/generic/build_image/weather/weather.yaml
# SPDX-FileCopyrightText: © 2023 Siemens Healthcare GmbH
#
# SPDX-License-Identifier: MIT
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: weather-linux
spec:
  selector:
    matchLabels:
      app: weather-linux
  replicas: 1
  template:
    metadata:
      labels:
        app: weather-linux
    spec:
      imagePullSecrets:
        - name: regcred
      containers:
        - name: weather-linux
          image: k2s.registry.local/weather:99
          ports:
            - containerPort: 80
      nodeSelector:
        kubernetes.io/os: linux
---
apiVersion: v1
kind: Service
metadata:
  name: weather-linux
spec:
  selector:
    app: weather-linux
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  clusterIP: 172.21.0.210
---
